# hasanlang

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTES.md  README.md  input.adl  input.hsl  input2.adl  input2.hs  input2.hsl  input3.adl  input3.hsl  prompt.txt  todo.txt
.github/actions/badge/: action.yml
.github/workflows/: badge.yml  build.yml  rust.yml
badge/: action.yml  package.json
badge/src/: index.js
compiler/hasan_analyzer/: Cargo.toml  README.md
compiler/hasan_analyzer/src/: analyzer.rs  generic_table.rs  lib.rs  scope.rs  scope_context.rs  symbol.rs
compiler/hasan_analyzer/src/analyzer/: generic_table.rs  scope.rs  symbol.rs
compiler/hasan_analyzer/src/analyzer/interface/: member.rs  mod.rs  variable.rs
compiler/hasan_analyzer/src/interface/: assoc_type.rs  function.rs  member.rs  mod.rs  variable.rs
compiler/hasan_compiler/: Cargo.toml  README.md
compiler/hasan_compiler/src/: constructs.rs  expression_value.rs  lib.rs  types.rs
compiler/hasan_compiler/tests/: README.md  compile_all_files.rs
compiler/hasan_hir/: Cargo.toml  README.md
compiler/hasan_hir/src/: lib.rs  statements.rs  traits.rs
compiler/hasan_hir/src/constructs/: enums.rs  functions.rs  mod.rs
compiler/hasan_hir/src/constructs/classes/: assoc_type.rs  function.rs  member.rs  mod.rs  variable.rs
compiler/hasan_hir/src/constructs/conditionals/: cond_for.rs  cond_if.rs  cond_while.rs  mod.rs
compiler/hasan_hir/src/intrinsics/: interfaces.rs  types.rs
compiler/hasan_hir/src/types/: dim_type.rs  mod.rs  type_ref.rs  type_struct.rs
compiler/hasan_intrinsics/: Cargo.toml  README.md
compiler/hasan_intrinsics/src/: lib.rs  types.rs
compiler/hasan_intrinsics/src/interfaces/: members.rs  mod.rs
compiler/hasan_macros/: Cargo.toml
compiler/hasan_macros/src/: conversion_inner.rs  lib.rs
compiler/hasan_macros/tests/: conversion.rs
compiler/hasan_parser/: Cargo.toml  README.md
compiler/hasan_parser/src/: errors.rs  lib.rs  main.rs  program.rs  traits.rs
compiler/hasan_parser/src/attributes_modifiers/: class_function_attribute.rs  general_modifier.rs  mod.rs
compiler/hasan_parser/src/expressions/: binary_operator.rs  expression.rs  expression_impl.rs  function.rs  mod.rs  unary_operator.rs
compiler/hasan_parser/src/members/: class.rs  interface.rs  mod.rs
compiler/hasan_parser/src/statements/: impls.rs  misc.rs  mod.rs  statement.rs
compiler/hasan_parser/src/types/: definition_type.rs  function_type.rs  mod.rs  regular_type.rs  tuple_type.rs  type_enum.rs
compiler/hasan_parser/tests/: parse_all_files.rs
compiler/hasan_parser/tests/cases/: 005_constants.hsl  009_function_call_statements.hsl  010_functions.hsl  012_if.hsl  016_recursive_expressions.hsl  017_types.hsl
compiler/hasan_parser/tests/outputs/: 000_anonymous_functions.txt  002_booleans.txt  003_classes.txt  004_comments.txt  005_constants.txt  006_enums.txt  007_event_class.txt  008_for.txt  009_function_call_statements.txt  010_functions.txt  011_generics.txt  012_if.txt  013_interfaces.txt  014_modules.txt  015_numbers.txt  016_recursive_expressions.txt  017_types.txt  018_variables.txt  019_while.txt
compiler/hasan_pest_parser/: Cargo.toml  README.md
compiler/hasan_pest_parser/src/: grammar.pest  lib.rs
crates/hasan_analyzer/: Cargo.toml
crates/hasan_analyzer/src/: analyzer.rs  lib.rs
crates/hasan_analyzer/src/analyzer/: built_ins.rs  scope.rs  symbol.rs
crates/hasan_cli/: Cargo.toml
crates/hasan_cli/src/: cli.rs
crates/hasan_cli/src/cli/: compile_command.rs
crates/hasan_compiler/: Cargo.toml
crates/hasan_compiler/src/: compiler.rs  lib.rs  types.rs
crates/hasan_compiler/src/compiler/: constructs.rs  expression_value.rs
crates/hasan_compiler/tests/failure/: 000_vars_outside_funcs.hsl  001_consts_inside_funcs.hsl
crates/hasan_compiler/tests/success/: 000_empty_function.hsl  001_variable_addition.hsl  002_inline_addition.hsl  002_variable_addition.hsl  003_sum_function.hsl
crates/hasan_hir/: Cargo.toml
crates/hasan_hir/src/: hir.rs  lib.rs  statements.rs
crates/hasan_hir/src/constructs/: enums.rs  mod.rs
crates/hasan_hir/src/hir/: constructs.rs  statements.rs  traits.rs  types.rs
crates/hasan_hir/src/intrinsics/: interfaces.rs  types.rs
crates/hasan_hir/src/types/: type_struct.rs
crates/hasan_parser/: Cargo.toml
crates/hasan_parser/src/: lib.rs  parser.rs  program.rs
crates/hasan_parser/src/attributes_modifiers/: class_function_attribute.rs
crates/hasan_parser/src/expressions/: binary_operator.rs  mod.rs
crates/hasan_parser/src/parser/: attributes_modifiers.rs  errors.rs  expressions.rs  members.rs  types.rs  (+1 more)
crates/hasan_parser/tests/: parse_all_files.rs
crates/hasan_pest_parser/src/: grammar.pest  parser.rs
crates/hasan_semantic_analyzer/: Cargo.toml
crates/hasan_semantic_analyzer/src/: analyzer.rs
features/implemented/: README.md  interfaces.md  module_system.md
features/planned/: advanced_generics.md  module_system.md
planned/: interfaces.md  module_system.md
src/: analyzer.rs  cli.rs  compiler.rs  consts.rs  grammar.pest  grammar2.pest  hasan_parser.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
src/analyzer/: analyzer.rs  types.rs
src/cli/: compile_command.rs  mod.rs  parse_command.rs
src/jobs/: analyze.rs  compile.rs  hasan_parse.rs  link.rs  mod.rs  pest_parse.rs  read_file.rs
tests/: parse_all_files.rs
tests/cases/: anonymous_functions.hsl  classes.hsl  comments.hsl  enums.hsl  event_class.hsl  for.hsl  function_call_statements.hsl  function_calls.hsl  functions.hsl  generics.hsl  if.hsl  interfaces.hsl  raw_types.hsl  recursive_expressions.hsl  spans_expressions.hsl  type_cast.hsl  types.hsl  variables.hsl
tests/outputs/: anonymous_functions.txt  arrays.txt  booleans.txt  classes.txt  comments.txt  constants.txt  enums.txt  event_class.txt  for.txt  function_call_statements.txt  functions.txt  generics.txt  if.txt  interfaces.txt  modules.txt  numbers.txt  raw_types.txt  recursive_expressions.txt  spans_expressions.txt  type_cast.txt  types.txt  variables.txt  while.txt
unimplemented/: README.md  module_system.md
(+75 files in other folders)
