[package]
name = "hasanlang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
hasan_cli = { path = "./crates/hasan_cli" }
hasan_pest_parser = { path = "./crates/hasan_pest_parser" }
hasan_parser = { path = "./crates/hasan_parser" }
hasan_semantic_analyzer = { path = "./crates/hasan_semantic_analyzer" }
hasan_compiler = { path = "./crates/hasan_compiler" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
pest = "2.7.0"