[package]
name = "hasan_analyzer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasan_parser = { path = "../hasan_parser" }
hasan_hir = { path = "../hasan_hir" }
hasan_intrinsics = { path = "../hasan_intrinsics" }
hasan_macros = { path = "../hasan_macros" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1.0.72"
indent = "0.1.1"