[package]
name = "hasan_compiler"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasan_pest_parser = { workspace = true }
hasan_parser = { workspace = true }
hasan_hir = { workspace = true }
hasan_macros = { workspace = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
pest = { workspace = true }
anyhow = { workspace = true }
rand = "0.8.5"