[package]
name = "hasan_hir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasan_parser = { path = "../hasan_parser" }
hasan_macros = { path = "../hasan_macros" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
indent = "0.1.1"
anyhow = "1.0.72"