[package]
name = "hasan_hir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasan_parser = { workspace = true }
hasan_macros = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
indent = { workspace = true }