[package]
name = "hasan_macros"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
syn = { version = "*", features = ["extra-traits"] }
paste = "1.0.14"
quote = "*"
proc-macro2 = "*"

[package.metadata.cargo-udeps.ignore]
normal = ["anyhow"] # Used in doc-tests