[package]
name = "hasan_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasan_pest_parser = { workspace = true }
hasan_macros = { workspace = true }
pest = { workspace = true }
strum_macros = { workspace = true }
indent = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }